2016-04-05  Alex Christensen  <achristensen@webkit.org>

        Make CMake-generated binaries on Mac able to run
        https://bugs.webkit.org/show_bug.cgi?id=156268

        Reviewed by Daniel Bates.

        * Source/cmake/OptionsMac.cmake:

2016-04-04  Alejandro G. Castro  <alex@igalia.com>

        REGRESSION(r198492): [GTK] The WEB_RTC flag was not correctly added in some situations
        https://bugs.webkit.org/show_bug.cgi?id=156164

        Reviewed by Philippe Normand.

        Remove double space in the error message when openwebrtc is not present.

        * Source/cmake/OptionsGTK.cmake:

2016-04-03  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Bump GTK+ versions numbers.

        * Source/cmake/OptionsGTK.cmake:

2016-03-31  Daniel Bates  <dabates@apple.com>

        tool tip/alt. text appears when mouse is no longer hovering over link
        https://bugs.webkit.org/show_bug.cgi?id=24427
        <rdar://problem/8045235>

        Reviewed by Antonio Gomes.

        Although the bug no longer reproduces, add a manual test that can be used to determine if a
        tooltip for a hyperlink is shown when the cursor no longer hovers over it.

        * ManualTests/tooltip-when-mouse-not-directly-over-hyperlink.html: Added.

2016-03-29  Commit Queue  <commit-queue@webkit.org>

        Unreviewed, rolling out r198781.
        https://bugs.webkit.org/show_bug.cgi?id=155986

        broke windows clean build (Requested by alexchristensen on
        #webkit).

        Reverted changeset:

        "[Win] CMake seems to build all generated files every time"
        https://bugs.webkit.org/show_bug.cgi?id=155872
        http://trac.webkit.org/changeset/198781

2016-03-29  Brent Fulgham  <bfulgham@apple.com>

        [Win] CMake seems to build all generated files every time
        https://bugs.webkit.org/show_bug.cgi?id=155872

        Reviewed by Alex Christensen.
